--- a/src/Smartstore.Web/Views/Product/Partials/Product.Variants.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.Variants.cshtml
@@ -4,7 +4,7 @@
 
 @{
     // TODO: (mg) Configured price surcharge not displayed (anymore?)
-    // TODO: (mg) --> (mh) File uploader is broken
+    // RE: it's displayed for me according to ProductVariantAttributeValueModel.GetItemLabel(). Tested with all list control types.
     // TODO: (mg) Text type attribute desperately needs some sort of user constraint (e.g. Regex)
 }
 
