--- a/src/Smartstore.Web/Areas/Admin/Views/Shared/Components/AdminNavbar/Default.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shared/Components/AdminNavbar/Default.cshtml
@@ -24,7 +24,7 @@
 
     <div id="navbar-menu" class="collapse navbar-collapse mr-auto">
         <zone name="admin_menu_before"></zone>
-        <menu name="Admin" template="Admin"></menu>
+        <menu name="Admin" template="Admin" />
         <zone name="admin_menu_after"></zone>
     </div>
 
