--- a/src/Smartstore.Web/Areas/Admin/Views/Product/Partials/_CopyAttributesInfo.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/Partials/_CopyAttributesInfo.cshtml
@@ -8,7 +8,7 @@
                 <tr>
                     <th scope="col"></th>
                     <th scope="col" style="width: 60%;">@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values")</th>
-                    <th scope="col" class="text-center">@T("Admin.Catalog.Products.ProductVariantAttributes.Rules")</th>
+                    <th scope="col" class="text-center">@T("Common.Rules")</th>
                 </tr>
             </thead>
             <tbody>
