--- a/src/Smartstore.Web/Areas/Admin/Views/Product/Grids/_Grid.AttributeValues.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/Grids/_Grid.AttributeValues.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProductModel.ProductVariantAttributeValueModel
 
 @{
-    var parentModel = ViewData["Parent"] as ProductModel.ProductVariantAttributeValueListModel;
+    var parentModel = ViewData["Parent"] as EditProductAttributeModel;
 }
 
 <datagrid id="product-attribute-values-grid" class="h-100"
