--- a/src/Smartstore.Web/Areas/Admin/Views/SpecificationAttribute/_Grid.SpecificationAttributes.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/SpecificationAttribute/_Grid.SpecificationAttributes.cshtml
@@ -48,6 +48,7 @@
             </display-template>
         </column>
         <column for="Alias" />
+        <column for="NumberOfOptions" halign="center" sortable="false" readonly="true" format="{0:N0}" />
         <column for="AllowFiltering" halign="center" />
         <column for="ShowOnProductPage" halign="center" />
         <column for="DisplayOrder" halign="center" />
