--- a/src/Smartstore.Web/Areas/Admin/Views/Customer/_SendEmailWindow.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Customer/_SendEmailWindow.cshtml
@@ -11,7 +11,7 @@
                         <smart-label asp-for="Subject" />
                     </div>
                     <div class="adminData">
-                        <editor asp-for="Subject" />
+                        <input asp-for="Subject" />
                         <span asp-validation-for="Subject"></span>
                     </div>
                 </div>
