Resolves #1004 Add captcha to password recovery form

--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/GeneralCommon.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/GeneralCommon.cshtml
@@ -453,6 +453,15 @@
                     </div>
                     <div class="adminRow">
                         <div class="adminTitle">
+                            <smart-label asp-for="CaptchaSettings.ShowOnPasswordRecoveryPage" />
+                        </div>
+                        <div class="adminData">
+                            <setting-editor asp-for="CaptchaSettings.ShowOnPasswordRecoveryPage"></setting-editor>
+                            <span asp-validation-for="CaptchaSettings.ShowOnPasswordRecoveryPage"></span>
+                        </div>
+                    </div>
+                    <div class="adminRow">
+                        <div class="adminTitle">
                             <smart-label asp-for="CaptchaSettings.ShowOnContactUsPage" />
                         </div>
                         <div class="adminData">
