Closes #959 Dashboard: make cards header layout responsive

--- a/src/Smartstore.Web/wwwroot/admin/_dashboard.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_dashboard.scss
@@ -102,6 +102,7 @@
         align-items: center;
         display: flex;
         flex-wrap: nowrap;
+        row-gap: 0.5rem;
 
         .report-title {
             font-size: 1.25rem;
