--- a/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
@@ -25,13 +25,29 @@
         <fieldset sm-if="Model.ExistingAddresses.Any()" class="content-group mb-3">
             <legend><span>@T("Checkout.SelectBillingAddress")</span></legend>
 
+            <div class="form-check my-3">
+                <input name="shipping-address-differs" id="shipping-address-differs" type="checkbox" class="form-check-input" />
+                <label class="form-check-label" for="shipping-address-differs">
+                    @T("Checkout.SpecifyDifferingShippingAddress")
+                </label>
+            </div>
+
+            <script sm-target-zone="scripts">
+                $(".select-billing-address-button").on("click", function (e) {
+                    e.preventDefault();
+                    var url = $(this).data("select-url") + "&shippingAddressDiffers=" + $("#shipping-address-differs").is(":checked");
+                    setLocation(url);
+                });
+            </script>
+
             <div class="row card-grid g-3 row-cols-1 row-cols-md-2 row-cols-lg-3 address-list">
                 @foreach (var item in Model.ExistingAddresses)
                 {
                     <div class="col">
                         <div class="card card-body address-list-item">
                             <div class="address-item">
-                                <button class="btn btn-warning btn-block select-billing-address-button" onclick="setLocation('@Url.Action("SelectBillingAddress", new { addressId = item.Id })')">
+                                <button class="btn btn-warning btn-block select-billing-address-button"
+                                        data-select-url="@Url.Action("SelectBillingAddress", new { addressId = item.Id })">
                                     <span>@T("Checkout.BillToThisAddress")</span>
                                     <i class="fa fa-angle-right"></i>
                                 </button>
@@ -63,12 +79,14 @@
                         </div>
                     </div>
                 }
+
+                <partial name="_AddNewAddress" />
             </div>
         </fieldset>
 
         <zone name="checkout_billing_address_middle" />
 
-        <fieldset class="content-group">
+        <fieldset class="content-group cnt-add-new-address pt-3" attr-style='(Model.ExistingAddresses.Any(), "display:none")'>
             <legend><span>@(Model.ExistingAddresses.Any() ? T("Checkout.OrEnterNewAddress") : T("Checkout.EnterBillingAddress"))</span></legend>
 
             <div class="enter-address">
