Quick checkout (testing) Fixed missing display of the payment method in order review data if there is only one active payment method (should only be hidden if the cart requires no payment at all).

--- a/src/Smartstore.Web/Views/Shared/Partials/_OrderReviewData.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/_OrderReviewData.cshtml
@@ -106,7 +106,7 @@
                         </div>
                         <p>@Model.ShippingMethod</p>
                     }
-                    @if (Model.PaymentMethod.HasValue() && !Model.IsPaymentSelectionSkipped)
+                    @if (Model.PaymentMethod.HasValue() && Model.IsPaymentRequired)
                     {
                         <div class="row sm-gutters">
                             <div class="col">
