--- a/src/Smartstore.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.cshtml
@@ -83,63 +83,7 @@
         }
 
         <tab sm-title="@T("Admin.Customers.Customers.Addresses")" sm-icon="bi:geo-alt">
-            <div>
-                <a asp-action="AddressCreate" asp-route-customerId="@Model.Id" class="btn btn-primary mb-3">
-                    <i class="fa fa-plus"></i>
-                    <span>@T("Account.CustomerAddresses.AddNew")</span>
-                </a>
-            </div>
-            <div id="customer-addresses">
-                <div class="grid gap-3">
-                    @foreach (var address in Model.Addresses)
-                    {
-                        <div class="card g-col-12 g-col-sm-6 g-col-md-4 g-col-xl-3">
-                            <div class="card-body">
-                                <div class="mb-2">
-                                    @Html.Raw(address.FormattedAddress)
-                                </div>
-                                <div class="email">
-                                    @T("Order.Email"): @address.Email
-                                </div>
-                                <div sm-if="address.PhoneNumber.HasValue()" class="phone">
-                                    @T("Order.Phone"): @address.PhoneNumber
-                                </div>
-                                <div sm-if="address.FaxNumber.HasValue()" class="fax">
-                                    @T("Order.Fax"): @address.FaxNumber
-                                </div>
-                            </div>
-                            <div class="card-footer py-2">
-                                <a asp-action="AddressEdit" asp-controller="Customer" asp-route-customerId="@Model.Id" asp-route-addressId="@address.Id"
-                                    class="btn btn-sm btn-flat btn-icon btn-secondary" title="@T("Common.Edit")">
-                                    <i class="far fa-edit"></i>
-                                </a>
-                                <button id="address-delete-@address.Id" type="button" class="btn btn-sm btn-flat btn-icon btn-danger delete-address" title="@T("Common.Delete")"
-                                        data-url="@Url.Action("AddressDelete", "Customer", new { customerId = Model.Id, addressId = address.Id })">
-                                    <i class="far fa-trash-can"></i>
-                                </button>
-                            </div>
-                        </div>
-                    }
-                </div>
-            </div>
-
-            <script sm-target-zone="scripts" data-origin="customer-create-or-update-Addresses">
-                $(function () {
-                    $('#customer-addresses').on('click', 'button.delete-address', function () {
-                        var card = $(this).closest('.card');
-                        $(this).ajax({
-                            type: 'POST',
-					        ask: @(T("Admin.Common.DeleteConfirmation").JsValue),
-                            iconType: "delete",
-                            success: function (success) {
-                                if (success) {
-                                    card.remove();
-                                }
-					        }
-				        });
-			        });
-		        });
-            </script>
+            <partial name="_Addresses" />
         </tab>
         <tab sm-title="@T("Admin.Customers.Customers.CurrentCart")" sm-icon="bi:cart-check">
             <h5 class="mt-3 text-muted">@T("Admin.Customers.Customers.CurrentShoppingCart")</h5>
