Minor select2 update problem

--- a/src/Smartstore.Web/Areas/Admin/Views/Menu/_CreateOrUpdate.Item.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Menu/_CreateOrUpdate.Item.cshtml
@@ -251,6 +251,7 @@
         $('.icon-color-chooser > option').each(function () {
             var option = $(this);
             option.data("color", colorVars['--' + this.value]);
+            option.trigger('change.select2');
         });
     });
 </script>
